Fixed wonky final point of ray